# finance-app

./: .gitignore  CLAUDE.md  README.md  README.txt  finance.py  pyproject.toml
.playwright-mcp/: page-2026-04-17T10-34-36-066Z.yml  page-2026-04-17T10-35-22-209Z.yml  page-2026-04-17T14-54-23-701Z.yml
finance_app/: csv_export.py  db.py  display.py  logger.py  menus.py  models.py  pdf_export.py  reports.py
