[project]
name = "personal-finance"
version = "0.1.0"
description = "Personal finance CLI application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["reportlab"]

[project.scripts]
finance = "finance:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_app", "finance.py"]
